feat: add student self-registration
